src/Libretro/Foreign.hsc


instance Storable RetroSystemTiming where
  sizeOf _ = #{size struct retro_system_timing}
  alignment _ = #{alignment struct retro_system_timing}
  peek p = RetroSystemTiming
    <$> ( #{peek struct retro_system_timing, fps} p )
    <*> ( #{peek struct retro_system_timing, sample_rate} p )
  poke p (RetroSystemTiming {..}) = error "Cannot poke RetroSystemTiming"

-- retro_game_info

data RetroGameInfo = RetroGameInfo
  { retroGameInfoPath :: String
  , retroGameInfoData :: [Word8]
  , retroGameInfoMeta :: String
  } deriving (Eq, Show)

instance Storable RetroGameInfo where
  sizeOf _ = #{size struct retro_game_info}
  alignment _ = #{alignment struct retro_game_info}
  peek p = RetroGameInfo
    <$> ( #{peek struct retro_game_info, path} p >>= peekCString )
    <*> ( peekByteArray (#{peek struct retro_game_info, data} p) (#{peek struct retro_game_info, size} p) )
    <*> ( #{peek struct retro_game_info, meta} p >>= peekCString )
  poke p (RetroGameInfo {..}) = do
    path <- newCString retroGameInfoPath
    #{poke struct retro_game_info, path} p path
    dat <- newArray retroGameInfoData
    #{poke struct retro_game_info, data} p dat
    #{poke struct retro_game_info, size} p (length retroGameInfoData)
    meta <- newCString retroGameInfoMeta
    #{poke struct retro_game_info, meta} p meta

-- retro_log_callback

data RetroLogCallback = RetroLogCallback
  { retroLogCallbackLog :: FunPtr RetroLogPrintfT
  } deriving (Eq, Show)

instance Storable RetroLogCallback where
  sizeOf _ = #{size struct retro_log_callback}
  alignment _ = #{alignment struct retro_log_callback}
  peek p = RetroLogCallback
    <$> ( #{peek struct retro_log_callback, log} p )
  poke p (RetroLogCallback {..}) = do
    #{poke struct retro_log_callback, log} p retroLogCallbackLog
